objects/MasterdataCustomLocalPicklist__mdt.object
<CustomObject>
    <fields>
        <fullName>ControlingFieldFilter__c</fullName>
        <label>Controling Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldFilter__c</fullName>
        <label>Field Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Package</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MasterdataGlobalValueSet__c</fullName>
        <label>Masterdata Global Value Set</label>
        <referenceTo>MasterdataGlobalValueSet__mdt</referenceTo>
        <relationshipLabel>Masterdata Custom Local Picklists</relationshipLabel>
        <relationshipName>MasterdataCustomLocalPicklists</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>SalesforceControlingFieldName__c</fullName>
        <label>Salesforce Controling Field Dev Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceControlingValue__c</fullName>
        <label>Salesforce Controling Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceCustomObjectName__c</fullName>
        <label>Salesforce Custom Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceEnglishTranslation__c</fullName>
        <label>Salesforce English Translation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforceFieldDeveloperName__c</fullName>
        <label>Salesforce Field Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforcePicklistAPIValue__c</fullName>
        <label>Salesforce Picklist API Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesforcePicklistValue__c</fullName>
        <label>Salesforce Picklist Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Masterdata Custom Local Picklist</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>IsActive__c</columns>
        <columns>SalesforceCustomObjectName__c</columns>
        <columns>MasterdataGlobalValueSet__c</columns>
        <columns>SalesforceFieldDeveloperName__c</columns>
        <columns>SalesforceControlingFieldName__c</columns>
        <columns>SalesforceControlingValue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>Masterdata Custom Local Picklists</pluralLabel>
</CustomObject>